--- a/AdminPanel/src/styles.css
+++ b/AdminPanel/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/css/nucleo-icons.css';
 @import 'assets/css/nucleo-svg.css';
-@import 'assets/css/material-dashboard.css';
+@import 'assets/css/material-dashboard.css?v=3.0.4';
