--- a/AdminPanel/src/app/login/login.component.html
+++ b/AdminPanel/src/app/login/login.component.html
@@ -36,19 +36,20 @@
                         </div>
                         <div class="card-body">
                             <div class="input-group input-group-outline my-3">
-                                <label class="form-label">Email</label>
-                                <input type="email" class="form-control">
+                                <label class="form-label">UserName</label>
+                                <input type="text" class="form-control" [(ngModel)]="user.userName">
                             </div>
                             <div class="input-group input-group-outline mb-3">
                                 <label class="form-label">Password</label>
-                                <input type="password" class="form-control">
+                                <input type="password" class="form-control" [(ngModel)]="user.password">
                             </div>
                             <div class="form-check form-switch align-items-center mb-3">
                                 <input class="form-check-input" type="checkbox" id="rememberMe" checked>
                                 <label class="form-check-label mb-0 ms-3" for="rememberMe">Remember me</label>
                             </div>
                             <div class="text-center">
-                                <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">{{title}}</button>
+                                <button type="button" (click)="login()"
+                                    class="btn bg-gradient-primary w-100 my-4 mb-2">{{title}}</button>
                             </div>
                             <p class="mt-4 text-sm text-center">
                                 Don't have an account?
