--- a/AdminPanel/src/app/layout/layout.component.html
+++ b/AdminPanel/src/app/layout/layout.component.html
@@ -52,9 +52,9 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown ps-2 d-flex align-items-center">
-                        <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton"
+                        <a (click)="logout()" class="nav-link text-danger p-0"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa fa-bell cursor-pointer"></i>
+                            <i class="fa fa-sign-out cursor-pointer"></i>
                         </a>
                     </li>
                 </ul>
