--- a/AdminPanel/src/assets/css/material-dashboard.css
+++ b/AdminPanel/src/assets/css/material-dashboard.css
@@ -4,6 +4,13 @@
    * Copyright 2011-2022 Twitter, Inc.
    * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
    */
+   @font-face {
+    font-family: 'iran';
+    src: url('../fonts/iran.eot?-wwn5ej');
+    src: url('../fonts/iran.eot?#iefix-wwn5ej') format('embedded-opentype'), url('../fonts/iran.woff?-wwn5ej') format('woff'), url('../fonts/iran.ttf?-wwn5ej') format('truetype'), url('../fonts/iran.svg?-wwn5ej#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 :root {
   --bs-blue: #63B3ED;
   --bs-indigo: #596CFF;
@@ -49,7 +56,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: , 128, 154;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
+  --bs-font-sans-serif: "iran";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -21044,7 +21051,7 @@ fieldset:disabled .btn {
 }
 
 .card .card-body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "iran";
   padding: 1.5rem;
 }
 
@@ -25945,7 +25952,7 @@ p {
 }
 
 .text-sans-serif {
-  font-family: "Roboto", Helvetica, Arial, sans-serif !important;
+  font-family: "iran" !important;
 }
 
 .text-monospace {
