--- a/AdminPanel/src/app/layout/layout.component.html
+++ b/AdminPanel/src/app/layout/layout.component.html
@@ -1,13 +1,14 @@
 <aside
-    class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-end me-3 rotate-caret  bg-gradient-dark"
-    id="sidenav-main">
+    class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-end me-3 rotate-caret  bg-gradient-dark">
     <div class="h-100">
+
         <div class="sidenav-header">
+            <button class="position-absolute d-xl-none d-flex start-1 btn-close p-2" onclick="toggleSidenav()"></button>
             <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute start-0 top-0 d-none d-xl-none"
                 aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0">
                 <img src="../assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="me-1 font-weight-bold text-white">AdminPanel</span>
+                <span class="me-1 font-weight-bold text-white">{{this.userName}}</span>
             </a>
         </div>
         <hr class="horizontal light mt-0 mb-2">
@@ -34,28 +35,23 @@
             </nav>
             <div class="collapse navbar-collapse mt-sm-0 mt-2 px-0" id="navbar">
                 <ul class="navbar-nav me-auto ms-0 justify-content-end">
-                    <li class="nav-item d-flex align-items-center">
-                        <i class="fa fa-user me-sm-1"></i>
+                    <li class="nav-item px-1 d-xl-none d-flex align-items-center cursor-pointer text-success"
+                        onclick="toggleSidenav()">
+                        <div class="sidenav-toggler-inner">
+                            <i class="sidenav-toggler-line"></i>
+                            <i class="sidenav-toggler-line"></i>
+                            <i class="sidenav-toggler-line"></i>
+                        </div>
                     </li>
-                    <li class="nav-item d-xl-none pe-3 d-flex align-items-center">
-                        <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
-                            <div class="sidenav-toggler-inner">
-                                <i class="sidenav-toggler-line"></i>
-                                <i class="sidenav-toggler-line"></i>
-                                <i class="sidenav-toggler-line"></i>
-                            </div>
-                        </a>
+
+                    <li class="nav-item px-1 d-flex align-items-center cursor-pointer text-success">
+                        <i class="fa fa-user"></i>
                     </li>
-                    <li class="nav-item px-3 d-flex align-items-center">
-                        <a href="javascript:;" class="nav-link text-body p-0">
-                            <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
-                        </a>
+                    <li class="nav-item px-1 d-flex align-items-center cursor-pointer text-info">
+                        <i class="fa fa-cog"></i>
                     </li>
-                    <li class="nav-item dropdown ps-2 d-flex align-items-center">
-                        <a (click)="logout()" class="nav-link text-danger p-0"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa fa-sign-out cursor-pointer"></i>
-                        </a>
+                    <li class="nav-item px-1 d-flex align-items-center cursor-pointer text-danger" (click)="logout()">
+                        <i class="fa fa-sign-out"></i>
                     </li>
                 </ul>
             </div>
