--- a/AdminPanel/src/app/login/login.component.html
+++ b/AdminPanel/src/app/login/login.component.html
@@ -42,42 +42,54 @@
               </div>
             </div>
             <div class="card-body">
-              <div class="input-group input-group-outline my-3">
-                <label class="form-label">{{ "UserName" | translate }}</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  [(ngModel)]="user.userName"
-                />
-              </div>
-              <div class="input-group input-group-outline mb-3">
-                <label class="form-label">{{ "Password" | translate }}</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  [(ngModel)]="user.password"
-                />
-              </div>
-              <div class="form-check form-switch align-items-center mb-3">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="rememberMe"
-                  checked
-                />
-                <label class="form-check-label mb-0 ms-3" for="rememberMe">{{
-                  "Remember me" | translate
-                }}</label>
-              </div>
-              <div class="text-center">
-                <button
-                  type="button"
-                  (click)="login()"
-                  class="btn bg-gradient-primary w-100 my-4 mb-2"
-                >
-                  {{ title | translate }}
-                </button>
-              </div>
+              <form [formGroup]="loginForm" novalidate  (ngSubmit)="login()">
+                <div class="input-group input-group-outline my-3">
+                  <div class="w-100">
+                    <label>{{ "UserName" | translate }}</label>
+                    <input formControlName="userName" class="form-control" />
+                  </div>
+                  <app-control-validation
+                    [formGroup]="loginForm"
+                    field="userName"
+                  ></app-control-validation>
+                </div>
+
+                <div class="input-group input-group-outline mb-3">
+                  <div class="w-100">
+                    <label>{{ "Password" | translate }}</label>
+                    <input
+                      formControlName="password"
+                      type="password"
+                      class="form-control"
+                    />
+                  </div>
+                  <app-control-validation
+                    [formGroup]="loginForm"
+                    field="password"
+                  ></app-control-validation>
+                </div>
+                <div class="form-check form-switch align-items-center mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="rememberMe"
+                    checked
+                  />
+                  <label class="form-check-label mb-0 ms-3" for="rememberMe">{{
+                    "Remember me" | translate
+                  }}</label>
+                </div>
+                <div class="text-center">
+                  <button
+                    type="submit"
+                    [disabled]="!loginForm.valid"
+                    class="btn bg-gradient-primary w-100 my-4 mb-2"
+                  >
+                    {{ title | translate }}
+                  </button>
+                </div>
+              </form>
+
               <p class="mt-4 text-sm text-center">
                 {{ "Don't have an account?" | translate }}
                 <a
