--- a/AdminPanel/src/app/login/login.component.html
+++ b/AdminPanel/src/app/login/login.component.html
@@ -4,21 +4,16 @@
   </div>
 </div>
 <main class="main-content mt-0">
-  <div
-    class="page-header align-items-start min-vh-100"
-    style="
+  <div class="page-header align-items-start min-vh-100" style="
       background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');
-    "
-  >
+    ">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container my-auto">
       <div class="row">
         <div class="col-lg-4 col-md-8 col-12 mx-auto">
           <div class="card z-index-0 fadeIn3 fadeInBottom">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div
-                class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1"
-              >
+              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                 <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                   {{ title | translate }}
                 </h4>
@@ -42,49 +37,33 @@
               </div>
             </div>
             <div class="card-body">
-              <form [formGroup]="loginForm"  (ngSubmit)="login()">
+              <form [formGroup]="loginForm" (ngSubmit)="login()">
+                <div class="list-unstyled text-danger text-center">
+                  <div *ngFor="let item of this.apiErrors">{{item}}</div>
+                </div>
                 <div class="input-group input-group-outline my-3">
                   <div class="w-100">
                     <label>{{ "UserName" | translate }}</label>
                     <input formControlName="userName" class="form-control" />
                   </div>
-                  <app-control-validation
-                    [formGroup]="loginForm"
-                    formControlName="userName"
-                  ></app-control-validation>
+                  <app-control-validation [formGroup]="loginForm" formControlName="userName"></app-control-validation>
                 </div>
 
                 <div class="input-group input-group-outline mb-3">
                   <div class="w-100">
                     <label>{{ "Password" | translate }}</label>
-                    <input
-                      formControlName="password"
-                      type="password"
-                      class="form-control"
-                    />
+                    <input formControlName="password" type="password" class="form-control" />
                   </div>
-                  <app-control-validation
-                    [formGroup]="loginForm"
-                    formControlName="password"
-                  ></app-control-validation>
+                  <app-control-validation [formGroup]="loginForm" formControlName="password"></app-control-validation>
                 </div>
                 <div class="form-check form-switch align-items-center mb-3">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="rememberMe"
-                    checked
-                  />
+                  <input class="form-check-input" type="checkbox" id="rememberMe" checked />
                   <label class="form-check-label mb-0 ms-3" for="rememberMe">{{
                     "Remember me" | translate
-                  }}</label>
+                    }}</label>
                 </div>
                 <div class="text-center">
-                  <button
-                    type="submit"
-                    [disabled]="!loginForm.valid"
-                    class="btn bg-gradient-primary w-100 my-4 mb-2"
-                  >
+                  <button type="submit" [disabled]="!loginForm.valid" class="btn bg-gradient-primary w-100 my-4 mb-2">
                     {{ title | translate }}
                   </button>
                 </div>
@@ -92,10 +71,7 @@
 
               <p class="mt-4 text-sm text-center">
                 {{ "Don't have an account?" | translate }}
-                <a
-                  href="../pages/sign-up.html"
-                  class="text-primary text-gradient font-weight-bold"
-                >
+                <a href="../pages/sign-up.html" class="text-primary text-gradient font-weight-bold">
                   {{ "Sign up" | translate }}
                 </a>
               </p>
