--- a/AdminPanel/src/app/pages/dashboard/dashboard.component.html
+++ b/AdminPanel/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+    <div class="col-lg-3 col-sm-6 mb-4">
       <div class="card">
         <div class="card-header p-3 pt-2">
           <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
@@ -16,7 +16,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+    <div class="col-lg-3 col-sm-6 mb-4">
       <div class="card">
         <div class="card-header p-3 pt-2">
           <div class="icon icon-lg icon-shape bg-gradient-primary shadow-primary text-center border-radius-xl mt-n4 position-absolute">
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+    <div class="col-lg-3 col-sm-6 mb-4">
       <div class="card">
         <div class="card-header p-3 pt-2">
           <div class="icon icon-lg icon-shape bg-gradient-success shadow-success text-center border-radius-xl mt-n4 position-absolute">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-sm-6">
+    <div class="col-lg-3 col-sm-6 mb-4">
       <div class="card">
         <div class="card-header p-3 pt-2">
           <div class="icon icon-lg icon-shape bg-gradient-info shadow-info text-center border-radius-xl mt-n4 position-absolute">
@@ -69,5 +69,13 @@
           <p class="mb-0 text-start"><span class="text-success text-sm font-weight-bolder ms-1">+7% </span>مقارنة بيوم أمس</p>
         </div>
       </div>
+    </div>
+    <div class="col-lg-3 col-sm-6 mb-4">
+      <div class="card">
+        <div class="card-header p-3 pt-2">
+          <button (click)="mbox()">mbox</button>
+        </div>
+      </div>
+
     </div>
   </div>
