--- a/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
@@ -4,7 +4,7 @@
       <div class="card-header p-3 pt-2">
         <div class="pt-1">
           <button class="btn btn-info" (click)="CreateProduct()">
-            {{ "Add" | translate }}
+            {{ "Add Product" | translate }}
           </button>
         </div>
       </div>
