--- a/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
@@ -10,7 +10,7 @@
       </div>
       <hr class="dark horizontal my-0" />
       <div class="card-footer p-3">
-        <table class="table" ng-if="this.listProducts.length > 0">
+        <table class="table table-responsive table-bordered table-striped table-hover" ng-if="this.listProducts.length > 0">
           <tr>
             <td>{{ "Id" | translate }}</td>
             <td>{{ "Name" | translate }}</td>
