--- a/AdminPanel/src/app/layout/layout.component.html
+++ b/AdminPanel/src/app/layout/layout.component.html
@@ -1,63 +1,96 @@
 <aside
-    class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-end me-3 rotate-caret  bg-gradient-dark">
-    <div class="h-100">
-
-        <div class="sidenav-header">
-            <button class="position-absolute d-xl-none d-flex start-1 btn-close p-2" onclick="toggleSidenav()"></button>
-            <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute start-0 top-0 d-none d-xl-none"
-                aria-hidden="true" id="iconSidenav"></i>
-            <a class="navbar-brand m-0">
-                <img src="../assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="me-1 font-weight-bold text-white">{{this.userName}}</span>
-            </a>
-        </div>
-        <hr class="horizontal light mt-0 mb-2">
-        <div class="px-0 w-auto overflow-y-hidden" id="sidenav-collapse-main">
-            <ul class="navbar-nav">
-                <li class="nav-item" *ngFor="let item of this.menu">
-                    <a class="nav-link " routerLink="/{{item.url}}">
-                        <div class="text-white text-center ms-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons-round opacity-10">{{item.icon}}</i>
-                        </div>
-                        <span class="nav-link-text me-1">{{item.title}}</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
+  class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-end me-3 rotate-caret bg-gradient-dark"
+>
+  <div class="h-100">
+    <div class="sidenav-header">
+      <button
+        class="position-absolute d-xl-none d-flex start-1 btn-close p-2"
+        onclick="toggleSidenav()"
+      ></button>
+      <i
+        class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute start-0 top-0 d-none d-xl-none"
+        aria-hidden="true"
+        id="iconSidenav"
+      ></i>
+      <a class="navbar-brand m-0">
+        <img
+          src="../assets/img/logo-ct.png"
+          class="navbar-brand-img h-100"
+          alt="main_logo"
+        />
+        <span class="me-1 font-weight-bold text-white">{{
+          this.userName
+        }}</span>
+      </a>
     </div>
-</aside>
-<main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg overflow-auto">
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
-        data-scroll="true">
-        <div class="container-fluid py-1 px-3">
-            <nav aria-label="breadcrumb">
-                <h6 class="font-weight-bolder mb-0">{{this.title}}</h6>
-            </nav>
-            <div class="collapse navbar-collapse mt-sm-0 mt-2 px-0" id="navbar">
-                <ul class="navbar-nav me-auto ms-0 justify-content-end">
-                    <li class="nav-item px-1 d-xl-none d-flex align-items-center cursor-pointer text-success"
-                        onclick="toggleSidenav()">
-                        <div class="sidenav-toggler-inner">
-                            <i class="sidenav-toggler-line"></i>
-                            <i class="sidenav-toggler-line"></i>
-                            <i class="sidenav-toggler-line"></i>
-                        </div>
-                    </li>
-
-                    <li class="nav-item px-1 d-flex align-items-center cursor-pointer text-success">
-                        <i class="fa fa-user"></i>
-                    </li>
-                    <li class="nav-item px-1 d-flex align-items-center cursor-pointer text-info">
-                        <i class="fa fa-cog"></i>
-                    </li>
-                    <li class="nav-item px-1 d-flex align-items-center cursor-pointer text-danger" (click)="logout()">
-                        <i class="fa fa-sign-out"></i>
-                    </li>
-                </ul>
+    <hr class="horizontal light mt-0 mb-2" />
+    <div class="px-0 w-auto overflow-y-hidden" id="sidenav-collapse-main">
+      <ul class="navbar-nav">
+        <li class="nav-item" *ngFor="let item of this.menu">
+          <a class="nav-link" routerLink="/{{ item.url }}">
+            <div
+              class="text-white text-center ms-2 d-flex align-items-center justify-content-center"
+            >
+              <i class="material-icons-round opacity-10">{{ item.icon }}</i>
             </div>
-        </div>
-    </nav>
-    <div class="container-fluid py-4">
-        <router-outlet></router-outlet>
+            <span class="nav-link-text me-1">{{ item.title }}</span>
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
+</aside>
+<main
+  class="main-content position-relative max-height-vh-100 h-100 border-radius-lg overflow-auto"
+>
+  <nav
+    class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl"
+    id="navbarBlur"
+    data-scroll="true"
+  >
+    <div class="container-fluid py-1 px-3">
+      <nav aria-label="breadcrumb">
+        <h6 class="font-weight-bolder mb-0">{{ this.title }}</h6>
+      </nav>
+      <div class="mt-sm-0 mt-2 px-0" id="navbar">
+        <ul class="navbar-nav me-auto ms-0 justify-content-end">
+          <li
+            class="nav-item px-1 d-flex align-items-center cursor-pointer text-success"
+          >
+            <app-language></app-language>
+          </li>
+          <li
+            class="nav-item px-1 d-xl-none d-flex align-items-center cursor-pointer text-success"
+            onclick="toggleSidenav()"
+          >
+            <div class="sidenav-toggler-inner">
+              <i class="sidenav-toggler-line"></i>
+              <i class="sidenav-toggler-line"></i>
+              <i class="sidenav-toggler-line"></i>
+            </div>
+          </li>
+
+          <li
+            class="nav-item px-1 d-flex align-items-center cursor-pointer text-success"
+          >
+            <i class="fa fa-user"></i>
+          </li>
+          <li
+            class="nav-item px-1 d-flex align-items-center cursor-pointer text-info"
+          >
+            <i class="fa fa-cog"></i>
+          </li>
+          <li
+            class="nav-item px-1 d-flex align-items-center cursor-pointer text-danger"
+            (click)="logout()"
+          >
+            <i class="fa fa-sign-out"></i>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container-fluid py-4">
+    <router-outlet></router-outlet>
+  </div>
 </main>
