--- a/AdminPanel/src/app/layout/layout.component.html
+++ b/AdminPanel/src/app/layout/layout.component.html
@@ -25,18 +25,7 @@
     </div>
     <hr class="horizontal light mt-0 mb-2" />
     <div class="px-0 w-auto overflow-y-hidden" id="sidenav-collapse-main">
-      <ul class="navbar-nav">
-        <li class="nav-item" *ngFor="let item of this.menu">
-          <a class="nav-link" routerLink="/{{ item.url }}">
-            <div
-              class="text-white text-center ms-2 d-flex align-items-center justify-content-center"
-            >
-              <i class="material-icons-round opacity-10">{{ item.icon }}</i>
-            </div>
-            <span class="nav-link-text me-1">{{ item.title }}</span>
-          </a>
-        </li>
-      </ul>
+      <app-menu></app-menu>
     </div>
   </div>
 </aside>
