--- a/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
@@ -3,25 +3,37 @@
     <div class="card">
       <div class="card-header p-3 pt-2">
         <div class="pt-1">
-          <button class="btn btn-info" (click)="CreateProduct()">
+          <button class="btn btn-info" (click)="createProduct()">
             {{ "Add Product" | translate }}
           </button>
         </div>
       </div>
       <hr class="dark horizontal my-0" />
       <div class="card-footer p-3">
-        <table class="table table-responsive table-bordered table-striped table-hover" ng-if="this.listProducts.length > 0">
+        <table
+          class="table table-responsive table-striped table-hover"
+          ng-if="this.listProducts.length > 0"
+        >
           <tr>
             <td>{{ "Id" | translate }}</td>
             <td>{{ "Name" | translate }}</td>
             <td>{{ "Price" | translate }}</td>
             <td>{{ "BarCode" | translate }}</td>
+            <td>{{ "Actions" | translate }}</td>
           </tr>
           <tr *ngFor="let item of this.listProducts">
             <td>{{ item.id }}</td>
             <td>{{ item.name }}</td>
             <td>{{ item.price }}</td>
             <td>{{ item.barCode }}</td>
+            <td>
+              <button (click)="updateProduct(item.id)" class="btn btn-behance m-1 btn-sm">
+                {{ "Edit" | translate }}
+              </button>
+              <button (click)="deleteProduct(item.id)" class="btn btn-danger m-1 btn-sm">
+                {{ "Delete" | translate }}
+              </button>
+            </td>
           </tr>
         </table>
       </div>
