--- a/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <hr class="dark horizontal my-0" />
-      <div class="card-footer p-3">
+      <div class="card-footer p-3 table-responsive">
         <table
           class="table table-responsive table-striped table-hover"
           ng-if="this.listProducts.length > 0"
