--- a/AdminPanel/src/app/modules/product/view/product-create/product-create.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-create/product-create.component.html
@@ -3,46 +3,17 @@
 </h2>
 <form [formGroup]="createForm" (ngSubmit)="save()">
   <mat-dialog-content>
-    <div class="input-group input-group-outline my-3">
-      <div class="w-100">
-        <label>{{ "Name" | translate }}</label>
-        <input formControlName="name" class="form-control" />
-      </div>
-      <app-control-validation
-        [formGroup]="createForm"
-        formControlName="name"
-      ></app-control-validation>
-    </div>
-    <div class="input-group input-group-outline my-3">
-      <div class="w-100">
-        <label>{{ "Price" | translate }}</label>
-        <input formControlName="price" class="form-control" type="number" />
-      </div>
-      <app-control-validation
-        [formGroup]="createForm"
-        formControlName="price"
-      ></app-control-validation>
-    </div>
-    <div class="input-group input-group-outline my-3">
-      <div class="w-100">
-        <label>{{ "BarCode" | translate }}</label>
-        <input formControlName="barCode" class="form-control" />
-      </div>
-      <app-control-validation
-        [formGroup]="createForm"
-        formControlName="barCode"
-      ></app-control-validation>
-    </div>
+
+    <app-text-box [formGroup]="createForm" [formControlName]="'name'" label="Name"></app-text-box>
+    <app-number-box [formGroup]="createForm" [formControlName]="'price'" label="Price"></app-number-box>
+    <app-text-box [formGroup]="createForm" [formControlName]="'barCode'" label="BarCode"></app-text-box>
+
   </mat-dialog-content>
   <mat-dialog-actions>
     <button class="btn btn-danger m-2" (click)="closeDialog()" type="button">
       {{ "Cancel" | translate }}
     </button>
-    <button
-      class="btn btn-success m-2"
-      type="submit"
-      [disabled]="!createForm.valid"
-    >
+    <button class="btn btn-success m-2" type="submit" [disabled]="!createForm.valid">
       {{ "Save" | translate }}
     </button>
   </mat-dialog-actions>
