--- a/AdminPanel/src/assets/css/material-dashboard.css
+++ b/AdminPanel/src/assets/css/material-dashboard.css
@@ -3265,12 +3265,14 @@ textarea.form-control-lg {
 .form-floating>.form-control-plaintext~label,
 .form-floating>.form-select~label {
   opacity: 0.65;
-  transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
+  transform:  translateY(-0.5rem) translateX(0.15rem);
+  font-size: 12px;
 }
 
 .form-floating>.form-control:-webkit-autofill~label {
   opacity: 0.65;
-  transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
+  transform:  translateY(-0.5rem) translateX(0.15rem);
+  font-size: 12px;
 }
 
 .form-floating>.form-control-plaintext~label {
