--- a/AdminPanel/src/app/shared/components/input-box/input-box.component.html
+++ b/AdminPanel/src/app/shared/components/input-box/input-box.component.html
@@ -1,6 +1,6 @@
 <div class="mb-3">
     <div class="form-floating">
-        <input class="border border-2 form-control px-2" [placeholder]="formControlName" autocomplete="off" [formControl]="formGroup.get(formControlName)">
+        <input class="border border-2 form-control px-2" [placeholder]="formControlName" autocomplete="off" [formControl]="formGroup.get(formControlName)" type="{{type}}">
         <label class="w-100 px-3 text-dark" style="padding-left: 5px !important;">{{ label | translate }}</label>
     </div>
     <app-control-validation [formGroup]="formGroup" [formControlName]="formControlName"></app-control-validation>
